<resources>
    <string name="app_name">Dev</string>
    <string name="id_name">id_name</string>
    <string name="add">+</string>
    <string name="setting">=</string>
    <string name="_44">44</string>
    <string name="_2154">2154</string>
    <string name="_89887">89887</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="gallery">gallery</string>
    <string name="about">about</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>